--- a/One-Page Website/css/one_page_website.css
+++ b/One-Page Website/css/one_page_website.css
@@ -1,85 +1,125 @@
-h1, h2, h3, p{
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 100%;
-    color: #0a3f63;
-}
-
-form{
-    padding: 15px;
+.row > .column {
+    padding: 0;
+  }
+  
+  .row:after {
+    content: "";
     display: table;
-    margin: auto;
-}
-
-input{
-    border: 2px solid rgb(165, 165, 165);
-    border-radius: 2px;
-    padding: 1px;
-    margin: 10px 15px 10px 0px;
-    font-size: 20px;
-    color: rgb(165, 165, 165);
-    transition: color 0.3s ease-out;
-}
-
-/*The :focus pseudo-class is triggered when a user clicks on an
-input element*/
-input:focus{
-    box-sizing: border-box;
-    border: 2px solid #0a3f63;
-    color: #000000;
-    transition: 0.3s ease-in;
-    outline: none;
-}
-
-/*Styles the label tag on the contact form*/
-label{
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    margin: 10px;
-}
-
-
-/*The type selector for the textarea element for a user to
-write a message*/
-textarea{
+    clear: both;
+  }
+  
+  /* Create four equal columns that floats next to eachother */
+  .column {
+    float: left;
+    width: 25%;
+  }
+  
+  /* The Modal (background) */
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
     width: 100%;
-    height: 200px;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 3px solid rgb(165, 165, 165);
-    border-radius: 4px;
-    background: #ffffff;
-    font-family: 'Roboto', sans-serif;
-    color: rgb(165. 165, 165);
-    font-size: 15px;
-    resize: both;
-    transition: color 0.3s ease-out;
-}
-
-/*Applies different styling to the textarea when users trigger
-the :focus pseudo-class by clicking on it*/
-textarea:focus{
-    box-sizing: border-box;
-    color: black;
-    border: 3px solid #0a3f63;
-    transition: 0.3s ease-in;
-    outline: none;
-}
-
-/*Styles the submit button*/
-input[type="submit"]{
-    background-color: #0a3f63;
-    border: none;
-    border-radius: 5px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    height: 100%;
+    overflow: auto;
+    background-color: black;
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    width: 90%;
+    max-width: 1200px;
+  }
+  
+  /* The Close Button */
+  .close {
     color: white;
-    padding: 16px 32px;
-    margin: 4px 2px;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #999;
+    text-decoration: none;
     cursor: pointer;
-    float: right;
-}
-/*Changes the background color of the submit button when a
-user hovers over it*/
-input[type="submit"]:hover{
-    background-color: #052133;
-}
+  }
+  
+  /* Hide the slides by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* Caption text */
+  .caption-container {
+    text-align: center;
+    background-color: black;
+    padding: 2px 16px;
+    color: white;
+  }
+  
+  img.demo {
+    opacity: 0.6;
+  }
+  
+  .active,
+  .demo:hover {
+    opacity: 1;
+  }
+  
+  img.hover-shadow {
+    transition: 0.3s;
+  }
+  
+  .hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
