--- a/Academy Cinemas/css/custom.css
+++ b/Academy Cinemas/css/custom.css
@@ -36,6 +36,17 @@ body{
     height: 100px;
 }
 
+/*SHRINK ON SCROLL NAVBAR*/
+.navshrink {
+    height: 80px;
+    transition: .5s ease;
+}
+
+/*Adds a transition to the move drop down menu on shrink and scroll*/
+.navbar-collapse {
+    transition: margin-top 0.5s ease;
+}
+
 /*Affects the title in the navbar Academy Cinemas*/
 .navbar-brand{
     color: var(--main-color-accent);
